feat: implemented fontawesome library for future use

--- a/public/index.html
+++ b/public/index.html
@@ -15,4 +15,8 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <script
+    src="https://kit.fontawesome.com/da890367f9.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
